# static_scenario_generator

./: CONTRIBUTING.md  INSTALLATION.md  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  example.ipynb  index.md
docs/html/: .buildinfo  CONTRIBUTING.html  INSTALLATION.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/geo_static_scenario_generator/: config.html  geo_scenarios.html
docs/html/_modules/resource_manager/: data_manager.html
docs/html/_modules/static_scenario_generator/: config.html  scenarios.html
docs/html/_sources/: INSTALLATION.md.txt  index.md.txt
docs/html/_sources/autoapi/: index.rst.txt
docs/html/autoapi/: index.html
docs/html/autoapi/geo_static_scenario_generator/: index.html
src/geo_static_scenario_generator/: geo_scenarios.py
src/resource_manager/: data_manager.py
src/static_scenario_generator/: data_manager.py  scenario_data_manager.py  scenarios.py
src/static_scenario_generator/config/: config.yaml
src/static_scenario_generator/resource_manager/: data_manager.py
src/tests/: config_test.py  data_manager_test.py
src/tests/data/: config.json  config_1.json  csv_load.csv  csv_load_input.csv  json_load.csv
tests/: config_test.py  data_manager_test.py  example.py  geo_example.py  output_test.py
tests/data/: .~lock.json_load.csv#  config.json  csv_load.csv  csv_load_input.csv
tests/geo_data/: config_1.json  csv_load.csv  csv_load_input.csv  json_load.csv
(+28 files in other folders)
