[tool.poetry]
name = "static_scenario_generator"
version = "1.0.0"
description = "Generation of user defined scenarios for the GOBLIN model"
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"